<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.screens.login_screen.LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:background="@drawable/button_purple_rounded_background"
        app:cardCornerRadius="34dp"
        android:layout_marginTop="-34dp"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="284dp"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_login" />

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/let_s_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/welcome_back_to_good_food"
        android:textAlignment="center"
        android:textColor="@color/yellow"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/hint_user_name"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/let_s_start" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/yellow"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />


    <Button
        android:id="@+id/imageView2"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:background="@drawable/button_purple_rounded_background"
        android:paddingHorizontal="8dp"
        android:text="@string/log_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.429"
        app:layout_constraintStart_toStartOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/password_et" />

    <ImageView
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:elevation="1dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>